[gd_scene load_steps=23 format=3 uid="uid://dsewrq7y6mnch"]

[ext_resource type="Script" path="res://Scenes/Gameplay/game.gd" id="1_o4wpn"]
[ext_resource type="PackedScene" uid="uid://djbupf86vrcpe" path="res://Entities/Paddles/Red Paddle/AI Paddle/ai_paddle_red.tscn" id="2_2ndue"]
[ext_resource type="PackedScene" uid="uid://cquyrrh87yhw" path="res://Entities/Paddles/Red Paddle/paddle_red.tscn" id="3_dn3lx"]
[ext_resource type="PackedScene" uid="uid://xjqw6jak37fa" path="res://Entities/Ball/ball.tscn" id="4_li07v"]
[ext_resource type="AudioStream" uid="uid://iscpl3l3j7pg" path="res://Scenes/Gameplay/Score.ogg" id="5_id3k2"]
[ext_resource type="Texture2D" uid="uid://twbq7u5ro2s7" path="res://Scenes/Gameplay/GameEnvironment.png" id="6_o8lwb"]
[ext_resource type="PackedScene" uid="uid://cesombxseq2bt" path="res://Entities/Paddles/Blue Paddle/paddle_blue.tscn" id="7_l6jjt"]
[ext_resource type="Script" path="res://Scenes/Gameplay/UI/Debug_Label.gd" id="8_2olad"]
[ext_resource type="Theme" uid="uid://ktu1r3yrsmdp" path="res://game_theme.tres" id="8_3xen2"]
[ext_resource type="Texture2D" uid="uid://dqytod6frkhvd" path="res://Scenes/Gameplay/UI/WinScreen/SeeThroughBG.png" id="9_ekyhf"]
[ext_resource type="PackedScene" uid="uid://d1ab3udiepd3p" path="res://Scenes/Gameplay/UI/WinScreen/win_screen.tscn" id="10_k6tjv"]
[ext_resource type="Texture2D" uid="uid://bixyw4l3ha5aj" path="res://Scenes/MainMenu/PlayerSelection/ControlSchemes/InputMappings/JoyPad/Glyph_DPad_Down.png" id="12_nw5a7"]
[ext_resource type="Texture2D" uid="uid://bwb0a8mxe44sy" path="res://Scenes/MainMenu/PlayerSelection/ControlSchemes/InputMappings/JoyPad/Glyph_ButtonBottom.png" id="13_o57s1"]
[ext_resource type="Texture2D" uid="uid://ct7da2wr72i6o" path="res://Scenes/MainMenu/PlayerSelection/ControlSchemes/InputMappings/JoyPad/Glyph_Start.png" id="14_vbefv"]
[ext_resource type="Texture2D" uid="uid://bigiqnad3msd0" path="res://Scenes/MainMenu/PlayerSelection/ControlSchemes/InputMappings/JoyPad/Glyph_Select.png" id="15_6etef"]
[ext_resource type="Texture2D" uid="uid://mjyo7pdlg456" path="res://Scenes/MainMenu/PlayerSelection/ControlSchemes/InputMappings/JoyPad/Glyph_DPad_Up.png" id="16_dq8dc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kg6fs"]
size = Vector2(608, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tl6vq"]
size = Vector2(608, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0slyo"]
size = Vector2(220.625, 1160)

[sub_resource type="Shader" id="Shader_jsamj"]
code = "// this shader is used to fix blurry pixel art text

shader_type canvas_item;

uniform float threshold: hint_range(0.0, 1.0, 0.05);
uniform vec4 color: source_color;

void fragment() {
	vec4 input_color = texture(TEXTURE, UV);
	float value = clamp(sign(input_color.a - threshold) + 1.0, 0.0, 1.0);
	COLOR = vec4(color.rgb, value);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nxutv"]
shader = SubResource("Shader_jsamj")
shader_parameter/threshold = 1.0
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_pt756"]
load_path = "res://.godot/imported/Glyph_DPad_Up.png-7b04068a7a02f0826f186db7eaefa6b7.ctex"

[node name="Game" type="Node" node_paths=PackedStringArray("score_label_blue", "score_label_red", "ui_controls", "ui_player1_controls", "ui_player2_controls", "ui_game_paused", "win_screen", "blue_player", "audio_player")]
script = ExtResource("1_o4wpn")
score_label_blue = NodePath("UI/MarginContainer/HBox_Scores/Score_Label_Blue")
score_label_red = NodePath("UI/MarginContainer/HBox_Scores/Score_Label_Red")
ui_controls = NodePath("UI/UI_Controls")
ui_player1_controls = NodePath("UI/UI_Controls/PlayerOneControls")
ui_player2_controls = NodePath("UI/UI_Controls/PlayerTwoControls")
ui_game_paused = NodePath("UI/PauseScreen")
win_screen = NodePath("UI/WinScreen")
blue_player = NodePath("GameEnvironment/Paddle_Blue")
RedAiPaddle = ExtResource("2_2ndue")
RedPlayerPaddle = ExtResource("3_dn3lx")
ball_scene = ExtResource("4_li07v")
audio_player = NodePath("AudioStreamPlayer2D")
sound_score = ExtResource("5_id3k2")
metadata/_edit_vertical_guides_ = [644.0, -4.0]
metadata/_edit_horizontal_guides_ = [180.0, -12.0, 8.0, 8.0]

[node name="GameEnvironment" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("6_o8lwb")
centered = false

[node name="TopBorder" type="StaticBody2D" parent="GameEnvironment"]
position = Vector2(320, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameEnvironment/TopBorder"]
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_kg6fs")

[node name="BottomBorder" type="StaticBody2D" parent="GameEnvironment"]
position = Vector2(320, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameEnvironment/BottomBorder"]
position = Vector2(0, 28)
shape = SubResource("RectangleShape2D_tl6vq")

[node name="Blue_Goal" type="Area2D" parent="GameEnvironment"]
position = Vector2(-14, 180)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameEnvironment/Blue_Goal"]
position = Vector2(-88, -16)
shape = SubResource("RectangleShape2D_0slyo")

[node name="Red_Goal" type="Area2D" parent="GameEnvironment"]
position = Vector2(664, 180)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameEnvironment/Red_Goal"]
position = Vector2(78, 8)
shape = SubResource("RectangleShape2D_0slyo")

[node name="Paddle_Blue" parent="GameEnvironment" instance=ExtResource("7_l6jjt")]
position = Vector2(-4, 180)
player_name = "blue"
speed = 600
is_server = true
play_location = Vector2(20, 180)
move_up = "player1_up"
move_down = "player1_down"
serve = "player1_serve"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="UI" type="Control" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_nxutv")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_3xen2")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="HBox_Scores" type="HBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Score_Label_Blue" type="Label" parent="UI/MarginContainer/HBox_Scores"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0.392157, 1, 1)
theme_override_constants/outline_size = 2
text = "0"

[node name="Score_Label_Red" type="Label" parent="UI/MarginContainer/HBox_Scores"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "0"
horizontal_alignment = 2

[node name="Debug_Label" type="Label" parent="UI/MarginContainer"]
visible = false
layout_mode = 2
script = ExtResource("8_2olad")

[node name="PauseScreen" type="TextureRect" parent="UI"]
visible = false
layout_mode = 2
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_ekyhf")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="UI/PauseScreen/VBoxContainer"]
layout_mode = 2
text = "Game is paused!"
horizontal_alignment = 1

[node name="WinScreen" parent="UI" instance=ExtResource("10_k6tjv")]
visible = false
layout_mode = 1

[node name="UI_Controls" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="PlayerOneControls" type="VBoxContainer" parent="UI/UI_Controls"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="UpControl" type="HBoxContainer" parent="UI/UI_Controls/PlayerOneControls"]
layout_mode = 2
size_flags_horizontal = 0

[node name="FunctionLabel" type="Label" parent="UI/UI_Controls/PlayerOneControls/UpControl"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Up:"

[node name="ControlGlyph" type="TextureRect" parent="UI/UI_Controls/PlayerOneControls/UpControl" groups=["player1_up_glyph"]]
layout_mode = 2
size_flags_vertical = 4
texture = SubResource("CompressedTexture2D_pt756")
stretch_mode = 4

[node name="DownControl" type="HBoxContainer" parent="UI/UI_Controls/PlayerOneControls"]
layout_mode = 2
size_flags_horizontal = 0

[node name="FunctionLabel" type="Label" parent="UI/UI_Controls/PlayerOneControls/DownControl"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Down:"

[node name="ControlGlyph" type="TextureRect" parent="UI/UI_Controls/PlayerOneControls/DownControl" groups=["player1_down_glyph"]]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("12_nw5a7")
stretch_mode = 4

[node name="ServeControl" type="HBoxContainer" parent="UI/UI_Controls/PlayerOneControls"]
layout_mode = 2
size_flags_horizontal = 0

[node name="FunctionLabel" type="Label" parent="UI/UI_Controls/PlayerOneControls/ServeControl"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Serve:"

[node name="ControlGlyph" type="TextureRect" parent="UI/UI_Controls/PlayerOneControls/ServeControl" groups=["player1_serve_glyph"]]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("13_o57s1")
stretch_mode = 4

[node name="PauseControl" type="HBoxContainer" parent="UI/UI_Controls/PlayerOneControls"]
layout_mode = 2
size_flags_horizontal = 0

[node name="FunctionLabel" type="Label" parent="UI/UI_Controls/PlayerOneControls/PauseControl"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Pause:"

[node name="ControlGlyph" type="TextureRect" parent="UI/UI_Controls/PlayerOneControls/PauseControl" groups=["player1_pause_glyph"]]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("14_vbefv")
stretch_mode = 4

[node name="RematchControl" type="HBoxContainer" parent="UI/UI_Controls/PlayerOneControls" groups=["rematch_controls"]]
visible = false
layout_mode = 2
size_flags_horizontal = 0

[node name="FunctionLabel" type="Label" parent="UI/UI_Controls/PlayerOneControls/RematchControl"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Rematch:"

[node name="ControlGlyph" type="TextureRect" parent="UI/UI_Controls/PlayerOneControls/RematchControl" groups=["player1_serve_glyph"]]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("13_o57s1")
stretch_mode = 4

[node name="QuitControl" type="HBoxContainer" parent="UI/UI_Controls/PlayerOneControls" groups=["quit_controls"]]
visible = false
layout_mode = 2
size_flags_horizontal = 0

[node name="FunctionLabel" type="Label" parent="UI/UI_Controls/PlayerOneControls/QuitControl"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Quit:"

[node name="ControlGlyph" type="TextureRect" parent="UI/UI_Controls/PlayerOneControls/QuitControl" groups=["player1_quit_glyph"]]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("15_6etef")
stretch_mode = 4

[node name="PlayerTwoControls" type="VBoxContainer" parent="UI/UI_Controls"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 2

[node name="UpControl" type="HBoxContainer" parent="UI/UI_Controls/PlayerTwoControls"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="FunctionLabel" type="Label" parent="UI/UI_Controls/PlayerTwoControls/UpControl"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Up:"

[node name="ControlGlyph" type="TextureRect" parent="UI/UI_Controls/PlayerTwoControls/UpControl" groups=["player2_up_glyph"]]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("16_dq8dc")
stretch_mode = 4

[node name="DownControl" type="HBoxContainer" parent="UI/UI_Controls/PlayerTwoControls"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="FunctionLabel" type="Label" parent="UI/UI_Controls/PlayerTwoControls/DownControl"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Down:"

[node name="ControlGlyph" type="TextureRect" parent="UI/UI_Controls/PlayerTwoControls/DownControl" groups=["player2_down_glyph"]]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("12_nw5a7")
stretch_mode = 4

[node name="ServeControl" type="HBoxContainer" parent="UI/UI_Controls/PlayerTwoControls"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="FunctionLabel" type="Label" parent="UI/UI_Controls/PlayerTwoControls/ServeControl"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Serve:"

[node name="ControlGlyph" type="TextureRect" parent="UI/UI_Controls/PlayerTwoControls/ServeControl" groups=["player2_serve_glyph"]]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("13_o57s1")
stretch_mode = 4

[node name="PauseControl" type="HBoxContainer" parent="UI/UI_Controls/PlayerTwoControls"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="FunctionLabel" type="Label" parent="UI/UI_Controls/PlayerTwoControls/PauseControl"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Pause:"

[node name="ControlGlyph" type="TextureRect" parent="UI/UI_Controls/PlayerTwoControls/PauseControl" groups=["player1_pause_glyph", "player2_pause_glyph"]]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("14_vbefv")
stretch_mode = 4

[node name="RematchControl" type="HBoxContainer" parent="UI/UI_Controls/PlayerTwoControls" groups=["rematch_controls"]]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="FunctionLabel" type="Label" parent="UI/UI_Controls/PlayerTwoControls/RematchControl"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Rematch:"

[node name="ControlGlyph" type="TextureRect" parent="UI/UI_Controls/PlayerTwoControls/RematchControl" groups=["player2_serve_glyph"]]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("13_o57s1")
stretch_mode = 4

[node name="QuitControl" type="HBoxContainer" parent="UI/UI_Controls/PlayerTwoControls" groups=["quit_controls"]]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="FunctionLabel" type="Label" parent="UI/UI_Controls/PlayerTwoControls/QuitControl"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 15
text = "Quit:"

[node name="ControlGlyph" type="TextureRect" parent="UI/UI_Controls/PlayerTwoControls/QuitControl" groups=["player2_quit_glyph"]]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("15_6etef")
stretch_mode = 4

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = &"SoundFX"

[connection signal="body_entered" from="GameEnvironment/Blue_Goal" to="." method="_on_blue_goal_body_entered"]
[connection signal="body_entered" from="GameEnvironment/Red_Goal" to="." method="_on_red_goal_body_entered"]
